Copied code from 8's repo.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<meta charset="UTF-8">
+<title>Terminal Tools</title>
+<link rel='shortcut icon' href='https://storage.googleapis.com/manager-static/static/img/favicon.ico'>
+<div id='progress'></div>
+<pre class='prettyprint'><code id='content' style='white-space:pre;font-family:monospace'></code></pre>
+<style>
+  input { margin:4px;padding:3px;border:none;border-bottom:1px solid gray } canvas { display:none } button { border:none;font-family:monospace;font-size:13px;margin:2px }</style>
+<select style='display:none' id='season'>
+  <option value='current'>Current</option>
+  <option value='one'>Season One</option>
+</select>
+<div id='picker' style='display:none;font-family:monospace'>showing<input id='start' type='text'>to<input id='end' type='text'><button
+    id='apply'>apply</button><button id='reset'>reset</button><button id='all'>all</button><button id='invert' style='float:right'>invert</button></div>
+<canvas id='top'></canvas><canvas id='metrics'></canvas>
+<link rel='stylesheet' href='https://jmblog.github.io/color-themes-for-google-code-prettify/themes/atelier-cave-light.min.css'>
+<script src='https://gitcdn.link/repo/google/code-prettify/master/loader/prettify.js'></script>
+<script src='https://unpkg.com/progressbar.js@1.0.1/dist/progressbar.min.js'></script>
+<script src='https://unpkg.com/moment@2.22.2/min/moment.min.js'></script>
+<script src='https://unpkg.com/chart.js@2.7.3/dist/Chart.min.js'></script>
+<script src='https://unpkg.com/hammerjs@2.0.8/hammer.min.js'></script>
+<script src='https://unpkg.com/chartjs-plugin-zoom@0.6.5/chartjs-plugin-zoom.min.js'></script>
+<script src='https://unpkg.com/pikaday@1.8.0/pikaday.js'></script>
+<link rel='stylesheet' href='https://unpkg.com/pikaday@1.8.0/css/pikaday.css'>
+<script>!function (a, b, c, d, e, f, g, h, i) { function j(a) { var b, c = a.length, e = this, f = 0, g = e.i = e.j = 0, h = e.S = []; for (c || (a = [c++]); d > f;)h[f] = f++; for (f = 0; d > f; f++)h[f] = h[g = s & g + a[f % c] + (b = h[f])], h[g] = b; (e.g = function (a) { for (var b, c = 0, f = e.i, g = e.j, h = e.S; a--;)b = h[f = s & f + 1], c = c * d + h[s & (h[f] = h[g = s & g + b]) + (h[g] = b)]; return e.i = f, e.j = g, c })(d) } function k(a, b) { var c, d = [], e = typeof a; if (b && "object" == e) for (c in a) try { d.push(k(a[c], b - 1)) } catch (f) { } return d.length ? d : "string" == e ? a : a + "\0" } function l(a, b) { for (var c, d = a + "", e = 0; e < d.length;)b[s & e] = s & (c ^= 19 * b[s & e]) + d.charCodeAt(e++); return n(b) } function m(c) { try { return o ? n(o.randomBytes(d)) : (a.crypto.getRandomValues(c = new Uint8Array(d)), n(c)) } catch (e) { return [+new Date, a, (c = a.navigator) && c.plugins, a.screen, n(b)] } } function n(a) { return String.fromCharCode.apply(0, a) } var o, p = c.pow(d, e), q = c.pow(2, f), r = 2 * q, s = d - 1, t = c["seed" + i] = function (a, f, g) { var h = []; f = 1 == f ? { entropy: !0 } : f || {}; var o = l(k(f.entropy ? [a, n(b)] : null == a ? m() : a, 3), h), s = new j(h); return l(n(s.S), b), (f.pass || g || function (a, b, d) { return d ? (c[i] = a, b) : a })(function () { for (var a = s.g(e), b = p, c = 0; q > a;)a = (a + c) * d, b *= d, c = s.g(1); for (; a >= r;)a /= 2, b /= 2, c >>>= 1; return (a + c) / b }, o, "global" in f ? f.global : this == c) }; if (l(c[i](), b), g && g.exports) { g.exports = t; try { o = require("crypto") } catch (u) { } } else h && h.amd && h(function () { return t }) }(this, [], Math, 256, 6, 52, "object" == typeof module && module, "function" == typeof define && define, "random");</script>
+<script src='graphing.js'></script>
+</html>
