Added a gitignore and a placeholder for highlight video link.

--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
 <pre class='prettyprint'><code id='content' style='white-space:pre;font-family:monospace'></code></pre>
 <style>
   input { margin:4px;padding:3px;border:none;border-bottom:1px solid gray } canvas { display:none } button { border:none;font-family:monospace;font-size:13px;margin:2px }</style>
+<div>
+	<a href='https://google.com'>Go to highlight video</a>
+</div>
 <select style='display:none' id='season'>
-  <option value='current'>Current</option>
-  <option value='one'>Season One</option>
+  <option value='current'>Season Two</option>
 </select>
 <div id='picker' style='display:none;font-family:monospace'>showing<input id='start' type='text'>to<input id='end' type='text'><button
     id='apply'>apply</button><button id='reset'>reset</button><button id='all'>all</button><button id='invert' style='float:right'>invert</button></div>
